Getting multiple system console error traces on Animation Drivers that appear to be functional #98525

Closed
opened 2022-05-31 22:49:51 +02:00 by Keith Boshoff · 7 comments
Member

Blender 3.3 (2022/05/31)

Short description

--------------------------------------------------------------------
Failed to add relation "RNA Target -> Driver"
Could not find op_from: RnaPathKey(id: OBshadow_rig, prop: 'Warp')

Trace:

Depth    Type                     Name
-----    ----                     ----
1        Object                   shadow_rig_obj

To demonstrate that the driver is actually working, in the Armature Data's Custom Properties there should be a Warp slider, slide that and the bone will transform weirdly (the weird transformation is functioning as intended).

If I'm reading the trace correctly it's looking for 'Warp' on the shadow_rig object, which is incorrect, the drivre is referencing 'Warp' on the shadow_rig data (data path is "data['Warp']"), and doing so correctly if you see the driver working.

I also get these errors on some Rigify rigs made from custom metarigs.

I have a feeling that the trace is being triggered incorrectly.

Steps to Reproduce
This rig uses drivers generated by a script if that matters.

  • Open Window > Toggle System Console
  • Select the visible rig
  • Tab into Edit Mode
  • Tab back to Object Mode
  • System console will have a few traces
    Weird Driver Traces.blend
Blender 3.3 (2022/05/31) **Short description** ``` -------------------------------------------------------------------- Failed to add relation "RNA Target -> Driver" Could not find op_from: RnaPathKey(id: OBshadow_rig, prop: 'Warp') Trace: Depth Type Name ----- ---- ---- 1 Object shadow_rig_obj ``` To demonstrate that the driver is actually working, in the Armature Data's Custom Properties there should be a Warp slider, slide that and the bone will transform weirdly (the weird transformation is functioning as intended). If I'm reading the trace correctly it's looking for 'Warp' on the shadow_rig object, which is incorrect, the drivre is referencing 'Warp' on the shadow_rig data (data path is "data['Warp']"), and doing so correctly if you see the driver working. I also get these errors on some Rigify rigs made from custom metarigs. I have a feeling that the trace is being triggered incorrectly. **Steps to Reproduce** This rig uses drivers generated by a script if that matters. - Open Window > Toggle System Console - Select the visible rig - Tab into Edit Mode - Tab back to Object Mode - System console will have a few traces [Weird Driver Traces.blend](https://archive.blender.org/developer/F13125427/Weird_Driver_Traces.blend)
Author
Member

Added subscriber: @Wahooney

Added subscriber: @Wahooney
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

DepsgraphNodeBuilder::build_driver_id_property adds the operation node in the Object datablock, but the RNA path points to the Armature datablock. This case is described in a comment here:
https://developer.blender.org/diffusion/B/browse/master/source/blender/depsgraph/intern/builder/deg_builder_relations.cc$1714-1737

      /* It is possible that RNA path points to a property of a different ID than the target_id:
     * for example, paths like "data" on Object, "camera" on Scene.
      ...
`DepsgraphNodeBuilder::build_driver_id_property` adds the operation node in the `Object` datablock, but the RNA path points to the `Armature` datablock. This case is described in a comment here: https://developer.blender.org/diffusion/B/browse/master/source/blender/depsgraph/intern/builder/deg_builder_relations.cc$1714-1737 ``` /* It is possible that RNA path points to a property of a different ID than the target_id: ``` * for example, paths like "data" on Object, "camera" on Scene. ``` ...

This issue was referenced by 2f729bc111

This issue was referenced by 2f729bc1117cddd809a8545ae7f4dd424e689dbc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Alexander Gavrilov self-assigned this 2022-08-31 18:01:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98525
No description provided.